# cargo-husky

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  build.rs
.github/workflows/: ci.yaml
src/: lib.rs  test.rs
src/testdata/user-hooks/.cargo-husky/hooks/: pre-commit
test/: test.rs
test/testdata/user-hooks/.cargo-husky/hooks/: post-merge
